--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuxeLaptops | Premium Computer Store</title>
+    <title>LuxeLaptops | DONALD COMPUTER AMD ACCESSORIES</title>
     <link rel="stylesheet" href="style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
@@ -129,15 +129,15 @@
                         <div class="contact-info">
                             <div class="info-card">
                                 <h3>Store Location</h3>
-                                <p>123 Tech Avenue, Silicon Valley, CA 94025</p>
+                                <p>Tema comm. 25, Ghana</p>
                             </div>
                             <div class="info-card">
                                 <h3>Support Email</h3>
-                                <p>hello@luxelaptops.com</p>
+                                <p>narhsnazzisco@gmail.com</p>
                             </div>
                             <div class="info-card">
-                                <h3>Call Us</h3>
-                                <p>+1 (800) 589-3-LAPTOP</p>
+                                <h3>GHANA</h3>
+                                <p>+233 532340875</p>
                             </div>
                         </div>
                         <form class="contact-form">
@@ -172,5 +172,6 @@
         </div>
         <script src="script.js"></script>
 </body>
+
 
 </html>
