--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuxeLaptops | DONALD COMPUTER AMD ACCESSORIES</title>
+    <title>LuxeLaptops | Premium Computer Store</title>
     <link rel="stylesheet" href="style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
+    <!-- Paystack Inline SDK -->
+    <script src="https://js.paystack.co/v1/inline.js"></script>
+    <!-- Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- OTP and QR Code Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/otpauth@9.1.1/dist/otpauth.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 
 <body>
@@ -26,6 +33,7 @@
                         <input type="password" id="login-pass" placeholder="Password" required>
                         <button type="submit" class="auth-btn">Sign In</button>
                     </form>
+                    <div id="google-login-btn"></div>
                     <p class="auth-switch">Don't have an account? <span id="show-signup">Sign Up</span></p>
                 </div>
 
@@ -37,6 +45,19 @@
                         <button type="submit" class="auth-btn">Create Account</button>
                     </form>
                     <p class="auth-switch">Already have an account? <span id="show-login">Login</span></p>
+                </div>
+
+                <div id="tfa-form-container" style="display: none;">
+                    <div class="auth-header">
+                        <h2>Two-Factor Auth</h2>
+                        <p>Enter the 6-digit code from Google Authenticator</p>
+                    </div>
+                    <form id="tfa-form">
+                        <input type="text" id="tfa-code" placeholder="000000" maxlength="6" pattern="\d{6}" required
+                            style="text-align: center; letter-spacing: 10px; font-size: 24px;">
+                        <button type="submit" class="auth-btn">Verify Code</button>
+                    </form>
+                    <p class="auth-switch"><span id="cancel-tfa">Back to Login</span></p>
                 </div>
             </div>
         </div>
@@ -52,6 +73,7 @@
                         <li class="nav-link active" data-section="store" data-filter="all">Store Home</li>
                         <li class="nav-link" data-section="faq">FAQs</li>
                         <li class="nav-link" data-section="contact">Contact Us</li>
+                        <li class="nav-link" data-section="settings">Account Security</li>
                     </ul>
                     <div class="divider">Categories</div>
                     <ul class="categories-nav">
@@ -129,15 +151,15 @@
                         <div class="contact-info">
                             <div class="info-card">
                                 <h3>Store Location</h3>
-                                <p>Tema comm. 25, Ghana</p>
+                                <p>123 Tech Avenue, Silicon Valley, CA 94025</p>
                             </div>
                             <div class="info-card">
                                 <h3>Support Email</h3>
-                                <p>narhsnazzisco@gmail.com</p>
+                                <p>hello@luxelaptops.com</p>
                             </div>
                             <div class="info-card">
-                                <h3>GHANA</h3>
-                                <p>+233 532340875</p>
+                                <h3>Call Us</h3>
+                                <p>+1 (800) 589-3-LAPTOP</p>
                             </div>
                         </div>
                         <form class="contact-form">
@@ -146,6 +168,39 @@
                             <textarea placeholder="How can we help you?" rows="5" required></textarea>
                             <button type="submit" class="auth-btn">Send Message</button>
                         </form>
+                    </div>
+                </div>
+
+                <!-- Settings View -->
+                <div id="settings-section" class="content-section">
+                    <h2 class="section-title">Account Security</h2>
+                    <div class="settings-container">
+                        <div class="settings-card">
+                            <h3>Two-Factor Authentication (2FA)</h3>
+                            <p>Add an extra layer of security to your account using Google Authenticator.</p>
+
+                            <div id="tfa-setup-area">
+                                <button id="enable-tfa-btn" class="auth-btn">Enable 2FA</button>
+                            </div>
+
+                            <div id="tfa-setup-wizard" style="display: none; margin-top: 20px; text-align: center;">
+                                <p>1. Scan this QR code with your Google Authenticator app:</p>
+                                <div id="qrcode"
+                                    style="margin: 20px auto; background: white; padding: 10px; display: inline-block;">
+                                </div>
+                                <p>2. Enter the 6-digit code to verify:</p>
+                                <input type="text" id="tfa-verify-code" placeholder="000000" maxlength="6"
+                                    style="text-align: center; font-size: 20px; width: 150px; margin: 10px 0;">
+                                <br>
+                                <button id="confirm-tfa-btn" class="auth-btn">Confirm & Activate</button>
+                            </div>
+
+                            <div id="tfa-active-status" style="display: none; color: #10b981; margin-top: 20px;">
+                                <p>✓ 2FA is currently active on your account.</p>
+                                <button id="disable-tfa-btn" class="auth-btn"
+                                    style="background: #ef4444; margin-top: 10px;">Disable 2FA</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
@@ -172,6 +227,5 @@
         </div>
         <script src="script.js"></script>
 </body>
-
 
 </html>
