--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             </div>
                             <div class="info-card">
                                 <h3>Support Email</h3>
-                                <p>hello@luxelaptops.com</p>
+                                <p>narhsnazzisco@gmail.com</p> <!-- Updated Owner Email -->
                             </div>
                             <div class="info-card">
                                 <h3>Call Us</h3>
@@ -214,6 +214,14 @@
                     </div>
                     <div class="cart-items" id="cart-items">
                         <!-- Cart items will be injected here -->
+                    </div>
+                    <div class="delivery-info-form">
+                        <h3>Delivery Details</h3>
+                        <input type="text" id="delivery-name" placeholder="Full Delivery Name" required>
+                        <input type="tel" id="delivery-phone" placeholder="Phone Number" required>
+                        <textarea id="delivery-address" placeholder="Delivery Address (Street, House No.)" rows="2"
+                            required></textarea>
+                        <input type="text" id="delivery-city" placeholder="City / Region" required>
                     </div>
                     <div class="cart-footer">
                         <div class="total">
