--- a/index.html
+++ b/index.html
@@ -162,10 +162,15 @@
                                 <p>+1 (800) 589-3-LAPTOP</p>
                             </div>
                         </div>
-                        <form class="contact-form">
-                            <input type="text" placeholder="Your Name" required>
-                            <input type="email" placeholder="Your Email" required>
-                            <textarea placeholder="How can we help you?" rows="5" required></textarea>
+                        <form class="contact-form" action="https://formsubmit.co/narhsnazzisco@gmail.com" method="POST">
+                            <!-- FormSubmit Configuration -->
+                            <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_template" value="table">
+                            <input type="hidden" name="_subject" value="New Message from DonaldLaptops!">
+
+                            <input type="text" name="name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
+                            <textarea name="message" placeholder="How can we help you?" rows="5" required></textarea>
                             <button type="submit" class="auth-btn">Send Message</button>
                         </form>
                     </div>
