--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="auth-gate" class="auth-overlay">
             <div class="auth-card">
                 <div class="auth-header">
-                    <h1>Luxe<span>Laptops</span></h1>
+                    <h1>Donald<span>Laptops</span></h1>
                     <p id="auth-msg">Please sign in to access the store</p>
                 </div>
 
@@ -267,4 +267,5 @@
 </body>
 
 </html>
+
 
