--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- Sidebar Navigation -->
             <aside class="sidebar">
                 <div class="logo">
-                    <h1>Luxe<span>Laptops</span></h1>
+                    <h1>Donald<span>Laptops</span></h1>
                 </div>
                 <nav>
                     <ul>
@@ -267,5 +267,6 @@
 </body>
 
 </html>
+
 
 
