--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="contact-info">
                             <div class="info-card">
                                 <h3>Store Location</h3>
-                                <p>123 Tech Avenue, Silicon Valley, CA 94025</p>
+                                <p>Teme Comm. 12 osudoku street</p>
                             </div>
                             <div class="info-card">
                                 <h3>Support Email</h3>
@@ -159,7 +159,7 @@
                             </div>
                             <div class="info-card">
                                 <h3>Call Us</h3>
-                                <p>+1 (800) 589-3-LAPTOP</p>
+                                <p>+233 532340875 Ghana</p>
                             </div>
                         </div>
                         <form class="contact-form" action="https://formsubmit.co/narhsnazzisco@gmail.com" method="POST">
@@ -267,6 +267,7 @@
 </body>
 
 </html>
+
 
 
 
