--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
                     <p id="auth-msg">Please sign in to access the store</p>
                 </div>
 
+                <button id="custom-google-btn" class="google-auth-btn">
+                    <svg width="18" height="18" viewBox="0 0 18 18">
+                        <path
+                            d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z"
+                            fill="#4285F4" />
+                        <path
+                            d="M9 18c2.43 0 4.467-.806 5.956-2.184l-2.908-2.259c-.806.54-1.837.86-3.048.86-2.344 0-4.328-1.584-5.036-3.711H.957v2.332A8.997 8.997 0 0 0 9 18z"
+                            fill="#34A853" />
+                        <path
+                            d="M3.964 10.705c-.18-.54-.282-1.117-.282-1.705s.102-1.165.282-1.705V4.963H.957A8.996 8.996 0 0 0 0 9c0 1.452.348 2.827.957 4.037l3.007-2.332z"
+                            fill="#FBBC05" />
+                        <path
+                            d="M9 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.463.891 11.426 0 9 0 5.482 0 2.443 2.048.957 4.963L3.964 7.294C4.672 5.167 6.656 3.58 9 3.58z"
+                            fill="#EA4335" />
+                    </svg>
+                    Continue with Google
+                </button>
+
+                <div class="auth-divider"><span>OR</span></div>
+
                 <div id="login-form-container">
                     <form id="login-form">
                         <input type="email" id="login-email" placeholder="Email Address" required>
@@ -46,8 +66,6 @@
                     <p class="auth-switch">Already have an account? <span id="show-login">Login</span></p>
                 </div>
 
-                <div class="auth-divider"><span>OR</span></div>
-                <div id="google-login-btn" style="margin-bottom: 20px;"></div>
 
                 <div id="tfa-form-container" style="display: none;">
                     <div class="auth-header">
