--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                     <p class="auth-switch">Already have an account? <span id="show-login">Login</span></p>
                 </div>
 
+                <div class="auth-footer-links">
+                    <a href="privacy.html">Privacy Policy</a>
+                </div>
+
 
                 <div id="tfa-form-container" style="display: none;">
                     <div class="auth-header">
@@ -109,6 +113,7 @@
                     <span id="cart-count">0</span>
                 </div>
                 <button id="logout-btn" class="logout-btn"><span>Sign Out</span></button>
+                <a href="privacy.html" class="privacy-sidebar-link">Privacy Policy</a>
             </aside>
 
             <!-- Main Content -->
