--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DonaldLaptops | Premium Computer Store</title>
+    <title>Logo Maker | Premium Computer Store</title>
     <link rel="stylesheet" href="style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
@@ -91,7 +91,7 @@
             <button id="menu-toggle" class="menu-toggle">☰</button>
             <aside class="sidebar" id="sidebar">
                 <div class="logo">
-                    <h1>Donald<span>Laptops</span></h1>
+                    <h1>Logo<span>Maker</span></h1>
                 </div>
                 <nav>
                     <ul>
