--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy | DonaldLaptops</title>
+    <title>Privacy Policy | Logo Maker</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
@@ -101,7 +101,7 @@
         <h1>Privacy Policy</h1>
         <p>Last Updated: February 17, 2026</p>
 
-        <p>At <strong>DonaldLaptops</strong>, we prioritize the privacy and security of our customers. This Privacy
+        <p>At <strong>Logo Maker</strong>, we prioritize the privacy and security of our customers. This Privacy
             Policy outlines how we collect, use, and protect your information when you use our website.</p>
 
         <h2>1. Information We Collect</h2>
