--- a/index.html
+++ b/index.html
@@ -16,34 +16,20 @@
     <!-- OTP and QR Code Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/otpauth@9.1.1/dist/otpauth.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <!-- Font Awesome for Social Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
     <div class="app-container">
-        <div id="auth-gate" class="auth-overlay">
+        <div id="auth-gate" class="auth-overlay" style="display: none;">
             <div class="auth-card">
                 <div class="auth-header">
-                    <h1>Donald<span>Laptops</span></h1>
-                    <p id="auth-msg">Please sign in to access the store</p>
+                    <img src="Logo maker project.png" alt="Logo Maker" class="logo-img" style="margin-bottom: 1rem;">
+                    <p id="auth-msg">Please sign in to complete your purchase</p>
                 </div>
 
-                <button id="custom-google-btn" class="google-auth-btn">
-                    <svg width="18" height="18" viewBox="0 0 18 18">
-                        <path
-                            d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z"
-                            fill="#4285F4" />
-                        <path
-                            d="M9 18c2.43 0 4.467-.806 5.956-2.184l-2.908-2.259c-.806.54-1.837.86-3.048.86-2.344 0-4.328-1.584-5.036-3.711H.957v2.332A8.997 8.997 0 0 0 9 18z"
-                            fill="#34A853" />
-                        <path
-                            d="M3.964 10.705c-.18-.54-.282-1.117-.282-1.705s.102-1.165.282-1.705V4.963H.957A8.996 8.996 0 0 0 0 9c0 1.452.348 2.827.957 4.037l3.007-2.332z"
-                            fill="#FBBC05" />
-                        <path
-                            d="M9 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.463.891 11.426 0 9 0 5.482 0 2.443 2.048.957 4.963L3.964 7.294C4.672 5.167 6.656 3.58 9 3.58z"
-                            fill="#EA4335" />
-                    </svg>
-                    Continue with Google
-                </button>
+                <div id="google-login-btn" style="margin-bottom: 1.5rem; display: flex; justify-content: center;"></div>
 
                 <div class="auth-divider"><span>OR</span></div>
 
@@ -86,47 +72,57 @@
             </div>
         </div>
 
-        <div class="app-container" id="main-app" style="display: none;">
-            <!-- Sidebar Navigation -->
-            <button id="menu-toggle" class="menu-toggle">☰</button>
-            <aside class="sidebar" id="sidebar">
-                <div class="logo">
-                    <h1>Logo<span>Maker</span></h1>
-                </div>
-                <nav>
-                    <ul>
+        <div class="app-container" id="main-app" style="display: flex; flex-direction: column;">
+            <!-- Top Navigation Bar -->
+            <nav class="top-nav">
+                <div class="nav-container">
+                    <div class="logo">
+                        <img src="Logo maker project.png" alt="Logo Maker" class="logo-img">
+                    </div>
+
+                    <ul class="nav-menu" id="nav-menu">
                         <li class="nav-link active" data-section="store" data-filter="all"><span>Store Home</span></li>
                         <li class="nav-link" data-section="faq"><span>FAQs</span></li>
                         <li class="nav-link" data-section="contact"><span>Contact Us</span></li>
-                        <li class="nav-link" data-section="settings"><span>Account Security</span></li>
+                        <li class="nav-link" data-section="settings"><span>Security</span></li>
                     </ul>
-                    <div class="divider"><span>Categories</span></div>
+
+                    <div class="nav-actions">
+                        <div class="search-bar">
+                            <input type="text" id="search-input" placeholder="Search...">
+                        </div>
+
+                        <div class="cart-summary" id="cart-toggle">
+                            <span>🛒</span>
+                            <span id="cart-count">0</span>
+                        </div>
+
+                        <div class="user-profile">
+                            <span id="user-full-name"
+                                style="margin-right: 12px; font-weight: 500; font-size: 0.9rem; color: var(--text);"></span>
+                            <img src="https://ui-avatars.com/api/?name=User&background=6366f1&color=fff"
+                                id="user-avatar" alt="User">
+                        </div>
+
+                        <button id="login-btn" class="logout-link" style="display: none;">Sign In</button>
+                        <button id="logout-btn" class="logout-link">Sign Out</button>
+                    </div>
+
+                    <button id="menu-toggle" class="menu-toggle">MENU ☰</button>
+                </div>
+
+                <div class="sub-nav">
                     <ul class="categories-nav">
                         <li data-section="store" data-filter="Gaming"><span>Gaming</span></li>
                         <li data-section="store" data-filter="Professional"><span>Professional</span></li>
                         <li data-section="store" data-filter="Business"><span>Business</span></li>
                         <li data-section="store" data-filter="Ultrabook"><span>Ultrabooks</span></li>
                     </ul>
-                </nav>
-                <div class="cart-summary" id="cart-toggle">
-                    <span>🛒 Cart</span>
-                    <span id="cart-count">0</span>
                 </div>
-                <button id="logout-btn" class="logout-btn"><span>Sign Out</span></button>
-                <a href="privacy.html" class="privacy-sidebar-link">Privacy Policy</a>
-            </aside>
+            </nav>
 
             <!-- Main Content -->
             <main class="content">
-                <header>
-                    <div class="search-bar">
-                        <input type="text" id="search-input" placeholder="Search by brand or model...">
-                    </div>
-                    <div class="user-profile">
-                        <img src="https://ui-avatars.com/api/?name=User&background=6366f1&color=fff" id="user-avatar"
-                            alt="User">
-                    </div>
-                </header>
 
                 <!-- Store View -->
                 <div id="store-section" class="content-section active">
@@ -302,6 +298,26 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="site-footer">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <p class="copyright">&copy; 2026 Logo Maker. All Rights Reserved.</p>
+                </div>
+                <div class="footer-section social-links">
+                    <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i
+                            class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com" target="_blank" aria-label="X (Twitter)"><i
+                            class="fab fa-x-twitter"></i></a>
+                    <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i
+                            class="fab fa-instagram"></i></a>
+                    <a href="https://snapchat.com" target="_blank" aria-label="Snapchat"><i
+                            class="fab fa-snapchat"></i></a>
+                </div>
+            </div>
+        </footer>
+
         <script src="script.js"></script>
 </body>
 
