--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div id="login-form-container">
                     <form id="login-form">
                         <input type="email" id="login-email" placeholder="Email Address" required>
-                        <input type="password" id="login-pass" placeholder="Password" required>
+                        <input type="password" id="login-pass" placeholder="Password" required minlength="8">
                         <button type="submit" class="auth-btn">Sign In</button>
                     </form>
                     <p class="auth-switch">Don't have an account? <span id="show-signup">Sign Up</span></p>
@@ -44,9 +44,16 @@
 
                 <div id="signup-form-container" style="display: none;">
                     <form id="signup-form">
-                        <input type="text" id="signup-name" placeholder="Full Name" required>
+                        <input type="text" id="signup-name" placeholder="Full Name" required minlength="2"
+                            pattern="[A-Za-z\s]+" title="Name should only contain letters and spaces">
                         <input type="email" id="signup-email" placeholder="Email Address" required>
-                        <input type="password" id="signup-pass" placeholder="Password" required>
+                        <input type="password" id="signup-pass" placeholder="Password (min 8 chars)" required
+                            minlength="8" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
+                            title="Password must be at least 8 characters with uppercase, lowercase, number, and special character">
+                        <div id="password-strength"
+                            style="margin-top: -0.5rem; margin-bottom: 1rem; font-size: 0.85rem; display: none;">
+                            <span id="strength-text"></span>
+                        </div>
                         <button type="submit" class="auth-btn">Create Account</button>
                     </form>
                     <p class="auth-switch">Already have an account? <span id="show-login">Login</span></p>
@@ -81,10 +88,19 @@
                     </div>
 
                     <ul class="nav-menu" id="nav-menu">
+                        <li class="mobile-search">
+                            <input type="text" class="search-input-field" placeholder="Search products...">
+                        </li>
                         <li class="nav-link active" data-section="store" data-filter="all"><span>Store Home</span></li>
                         <li class="nav-link" data-section="faq"><span>FAQs</span></li>
                         <li class="nav-link" data-section="contact"><span>Contact Us</span></li>
                         <li class="nav-link" data-section="settings"><span>Security</span></li>
+                        <li class="mobile-only" onclick="document.getElementById('cart-toggle').click()"><span>Cart
+                                (<span class="cart-count-display">0</span>)</span></li>
+                        <li class="mobile-only auth-link-login" onclick="document.getElementById('login-btn').click()">
+                            <span>Sign In</span></li>
+                        <li class="mobile-only auth-link-logout" onclick="document.getElementById('logout-btn').click()"
+                            style="display: none;"><span>Sign Out</span></li>
                     </ul>
 
                     <div class="nav-actions">
@@ -94,7 +110,7 @@
 
                         <div class="cart-summary" id="cart-toggle">
                             <span>🛒</span>
-                            <span id="cart-count">0</span>
+                            <span id="cart-count" class="cart-count-display">0</span>
                         </div>
 
                         <div class="user-profile">
@@ -280,7 +296,9 @@
                     </div>
                     <div class="input-group">
                         <label>Phone Number</label>
-                        <input type="tel" id="delivery-phone" placeholder="+233 XX XXX XXXX" required>
+                        <input type="tel" id="delivery-phone" placeholder="+233 XX XXX XXXX" required
+                            pattern="[\+]?[0-9\s\-]+"
+                            title="Please enter a valid phone number (numbers, spaces, +, and - only)">
                     </div>
                     <div class="input-group full">
                         <label>Street Address</label>
