--- a/index.html
+++ b/index.html
@@ -83,7 +83,29 @@
                     <p class="auth-switch"><span id="cancel-tfa">Back to Login</span></p>
                 </div>
             </div>
+                    <p class="auth-switch"><span id="show-forgot-pass"
+                            style="color: var(--primary); cursor: pointer; font-size: 0.9em; margin-top: 10px; display: inline-block;">Forgot
+                            Password?</span></p>
+                </div>
 
+                <div id="forgot-pass-container" style="display: none;">
+                    <div class="auth-header">
+                        <h2>Reset Password</h2>
+                        <p>Enter your email to receive a reset link</p>
+                    </div>
+                    <form id="forgot-pass-form">
+                        <input type="email" id="forgot-email" placeholder="Email Address" required>
+                        <button type="submit" class="auth-btn">Send Reset Link</button>
+                    </form>
+                    <p class="auth-switch"><span id="back-to-login">Back to Login</span></p>
+                </div>
+
+                <div id="signup-form-container" style="display: none;">
+                    <form id="signup-form">
+                        <input type="text" id="signup-name" placeholder="Full Name" required>
+                        <input type="email" id="signup-email" placeholder="Email Address" required>
+                        <input type="password" id="signup-pass" placeholder="Password" required>
+                        <button type="submit" class="auth-btn">Create Account</button>
             <!-- Social Login at the bottom of the page -->
             <div class="auth-footer-social">
                 <div class="auth-divider"><span>OR Login With</span></div>
@@ -401,3 +423,4 @@
 </body>
 
 </html>
+
