--- a/index.html
+++ b/index.html
@@ -37,23 +37,32 @@
                     <p id="auth-msg">Please sign in to complete your purchase</p>
                 </div>
 
+                <!-- 1. LOGIN FORM -->
                 <div id="login-form-container">
                     <form id="login-form">
                         <input type="email" id="login-email" placeholder="Email Address" required>
                         <input type="password" id="login-pass" placeholder="Password" required minlength="8">
                         <button type="submit" class="auth-btn">Sign In</button>
                     </form>
+                    <p class="auth-switch"><span id="show-forgot-pass"
+                            style="color: var(--primary); cursor: pointer; font-size: 0.9em; margin-top: 10px; display: inline-block;">Forgot
+                            Password?</span></p>
                     <p class="auth-switch">Don't have an account? <span id="show-signup">Sign Up</span></p>
+
+                    <div class="auth-footer-social">
+                        <div class="auth-divider"><span>OR Login With</span></div>
+                        <div id="google-login-btn"></div>
+                    </div>
                 </div>
 
+                <!-- 2. SIGNUP FORM -->
                 <div id="signup-form-container" style="display: none;">
                     <form id="signup-form">
                         <input type="text" id="signup-name" placeholder="Full Name" required minlength="2"
                             pattern="[A-Za-z\s]+" title="Name should only contain letters and spaces">
                         <input type="email" id="signup-email" placeholder="Email Address" required>
                         <input type="password" id="signup-pass" placeholder="Password (min 8 chars)" required
-                            minlength="8" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
-                            title="Password must be at least 8 characters with uppercase, lowercase, number, and special character">
+                            minlength="8">
                         <div id="password-strength"
                             style="margin-top: -0.5rem; margin-bottom: 1rem; font-size: 0.85rem; display: none;">
                             <span id="strength-text"></span>
@@ -66,10 +75,20 @@
                     <p class="auth-switch">Already have an account? <span id="show-login">Login</span></p>
                 </div>
 
-                <div class="auth-footer-links">
-                    <a href="privacy.html">Privacy Policy</a>
+                <!-- 3. FORGOT PASSWORD FORM -->
+                <div id="forgot-pass-container" style="display: none;">
+                    <div class="auth-header">
+                        <h2>Reset Password</h2>
+                        <p>Enter your email to receive a reset link</p>
+                    </div>
+                    <form id="forgot-pass-form">
+                        <input type="email" id="forgot-email" placeholder="Email Address" required>
+                        <button type="submit" class="auth-btn">Send Reset Link</button>
+                    </form>
+                    <p class="auth-switch"><span id="back-to-login" style="cursor: pointer;">Back to Login</span></p>
                 </div>
 
+                <!-- 4. TFA FORM -->
                 <div id="tfa-form-container" style="display: none;">
                     <div class="auth-header">
                         <h2>Two-Factor Auth</h2>
@@ -82,34 +101,10 @@
                     </form>
                     <p class="auth-switch"><span id="cancel-tfa">Back to Login</span></p>
                 </div>
-            </div>
-                    <p class="auth-switch"><span id="show-forgot-pass"
-                            style="color: var(--primary); cursor: pointer; font-size: 0.9em; margin-top: 10px; display: inline-block;">Forgot
-                            Password?</span></p>
-                </div>
 
-                <div id="forgot-pass-container" style="display: none;">
-                    <div class="auth-header">
-                        <h2>Reset Password</h2>
-                        <p>Enter your email to receive a reset link</p>
-                    </div>
-                    <form id="forgot-pass-form">
-                        <input type="email" id="forgot-email" placeholder="Email Address" required>
-                        <button type="submit" class="auth-btn">Send Reset Link</button>
-                    </form>
-                    <p class="auth-switch"><span id="back-to-login">Back to Login</span></p>
+                <div class="auth-footer-links">
+                    <a href="privacy.html">Privacy Policy</a>
                 </div>
-
-                <div id="signup-form-container" style="display: none;">
-                    <form id="signup-form">
-                        <input type="text" id="signup-name" placeholder="Full Name" required>
-                        <input type="email" id="signup-email" placeholder="Email Address" required>
-                        <input type="password" id="signup-pass" placeholder="Password" required>
-                        <button type="submit" class="auth-btn">Create Account</button>
-            <!-- Social Login at the bottom of the page -->
-            <div class="auth-footer-social">
-                <div class="auth-divider"><span>OR Login With</span></div>
-                <div id="google-login-btn"></div>
             </div>
         </div>
 
@@ -423,4 +418,3 @@
 </body>
 
 </html>
-
