--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                 <div id="login-form-container">
                     <form id="login-form">
                         <input type="email" id="login-email" placeholder="Email Address" required>
-                        <input type="password" id="login-pass" placeholder="Password" required minlength="8">
+                        <div class="password-field">
+                            <input type="password" id="login-pass" placeholder="Password" required minlength="8">
+                            <i class="fas fa-eye toggle-password" data-target="login-pass"></i>
+                        </div>
                         <button type="submit" class="auth-btn">Sign In</button>
                     </form>
                     <p class="auth-switch"><span id="show-forgot-pass"
@@ -61,8 +64,11 @@
                         <input type="text" id="signup-name" placeholder="Full Name" required minlength="2"
                             pattern="[A-Za-z\s]+" title="Name should only contain letters and spaces">
                         <input type="email" id="signup-email" placeholder="Email Address" required>
-                        <input type="password" id="signup-pass" placeholder="Password (min 8 chars)" required
-                            minlength="8">
+                        <div class="password-field">
+                            <input type="password" id="signup-pass" placeholder="Password (min 8 chars)" required
+                                minlength="8">
+                            <i class="fas fa-eye toggle-password" data-target="signup-pass"></i>
+                        </div>
                         <div id="password-strength"
                             style="margin-top: -0.5rem; margin-bottom: 1rem; font-size: 0.85rem; display: none;">
                             <span id="strength-text"></span>
