--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alfred Tech Hub | Institutional Laptop Excellence</title>
+    <title>DONALD LAPTOPS | Institutional Laptop Excellence</title>
     <meta name="description"
         content="Premium laptop store trusted by universities and higher institutions. 500+ models, 40+ global brands, institutional grade quality.">
     <link rel="stylesheet" href="style.css">
@@ -225,7 +225,7 @@
                     <section class="hero">
                         <div class="hero-inner">
                             <span class="hero-badge">🎓 Trusted by Higher Institutions &amp; Universities</span>
-                            <h2 class="hero-title">Premier Laptop <span class="gradient-text">Excellence Hub</span></h2>
+                            <h2 class="hero-title">DONALD LAPTOPS <span class="gradient-text">Excellence DEVICES</span></h2>
                             <p class="hero-subtitle">The most comprehensive institutional-grade laptop platform in Ghana
                                 — featuring 500+ models from 40+ world-class brands, curated for academia, research, and
                                 professional excellence.</p>
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="stat-divider"></div>
                                 <div class="stat-item">
-                                    <span class="stat-number">2yr</span>
+                                    <span class="stat-number">1yr</span>
                                     <span class="stat-label">Warranty</span>
                                 </div>
                                 <div class="stat-divider"></div>
@@ -487,3 +487,4 @@
 </body>
 
 </html>
+
