--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <section class="hero">
                         <div class="hero-inner">
                             <span class="hero-badge">🎓 Trusted by Higher Institutions &amp; Universities</span>
-                            <h2 class="hero-title">DONALD LAPTOPS <span class="gradient-text">Excellence DEVICES</span></h2>
+                            <h2 class="hero-title">DONALD LAPTOPS <span class="gradient-text">Excellence Devices</span></h2>
                             <p class="hero-subtitle">The most comprehensive institutional-grade laptop platform in Ghana
                                 — featuring 500+ models from 40+ world-class brands, curated for academia, research, and
                                 professional excellence.</p>
@@ -487,4 +487,5 @@
 </body>
 
 </html>
+
 
