--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <footer class="site-footer">
             <div class="footer-content">
                 <div class="footer-section">
-                    <p class="copyright">&copy; 2026 Logo Maker. All Rights Reserved.</p>
+                    <p class="copyright">&copy; 2026 DONALD LAPTOPS. All Rights Reserved.</p>
                 </div>
                 <div class="footer-section social-links">
                     <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i
@@ -487,6 +487,7 @@
 </body>
 
 </html>
+
 
 
 
