--- a/index.html
+++ b/index.html
@@ -141,9 +141,6 @@
                     </form>
                 </div>
 
-                <div class="auth-footer-links">
-                    <a href="privacy.html">Privacy Policy</a>
-                </div>
             </div>
         </div>
 
@@ -464,7 +461,10 @@
         <footer class="site-footer">
             <div class="footer-content">
                 <div class="footer-section">
-                    <p class="copyright">&copy; 2026 DONALD LAPTOPS. All Rights Reserved.</p>
+                    <p class="copyright">&copy; 2026 Logo Maker. All Rights Reserved.</p>
+                </div>
+                <div class="footer-section">
+                    <a href="privacy.html" style="color: var(--text-muted); text-decoration: none; font-size: 0.9rem;">Privacy Policy</a>
                 </div>
                 <div class="footer-section social-links">
                     <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i
@@ -487,7 +487,6 @@
 </body>
 
 </html>
-
 
 
 
